--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#fotter{
+  background-color: black;
+  width: 100%;
+  height: 3rem;
+  color: white;
+  
+}
+#f{
+  color:wheat;
+  
+} 
